Typo -- features.search -> features.site_search

--- a/sw/templates/search/search.html
+++ b/sw/templates/search/search.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content_body %}
-    {% if features.search %}
+    {% if features.site_search %}
         <form method="get" action="." class="uniForm">
             {{ form|as_uni_form }}
             <div class="form_block">
