Make default calendar on dashboard the campaign-wide calendar, excluding private teams user is not a member of.

--- a/sw/templates/dashboard/events.html
+++ b/sw/templates/dashboard/events.html
@@ -18,7 +18,19 @@
 
 {% block content_body %}
 
-    <h1>Upcoming events in your teams</h1>
+    {% if request.GET.teams %}
+        <h1>Upcoming events in your teams</h1>
+
+        <ul>
+            <li><a href="{% url dashboard_events %}">Campaign-wide calendar &rarr;</a></li>
+        </ul>
+    {% else %}
+        <h1>Upcoming events campaign-wide</h1>
+
+        <ul>
+            <li><a href="{% url dashboard_events %}?teams=1">My teams only &rarr;</a></li>
+        </ul>
+    {% endif %}
 
     {% include "dregni/weeks_calendar.html" %}
 
