--- a/sw/templates/base_hq_6_6.html
+++ b/sw/templates/base_hq_6_6.html
@@ -6,7 +6,7 @@
 
 {% block body_class %}{{ block.super }} hq{% endblock %}
 
-{% block header_slogan %}Volunteer HQ <span class="beta">Beta</span>{% endblock %}
+{% block header_slogan %}Volunteer <span class="beta">HQ</span>{% endblock %}
 
 {% block site_search %}{% include "base/site_search.html" %}{% endblock %}
 
